--- a/Exercise01.ipynb
+++ b/Exercise01.ipynb
@@ -592,7 +592,7 @@
     "\n",
     "注意点：\n",
     "\n",
-    "    Python中整除用//运算符"
+    "    Python中整除用//运算符![image.png](attachment:image.png)"
    ]
   },
   {
@@ -663,15 +663,6 @@
     "    1.绘制正方形\n",
     "    2.绘制正方形中间的十字   \n",
     "\n",
-    "算法：\n",
-    "    \n",
-    "    turtle绘制一个正方形（向前一定距离右转90度）\n",
-    "    抬笔到横向中点位置\n",
-    "    放笔画线\n",
-    "    抬笔到下面中点位置\n",
-    "    放笔画到中心位置\n",
-    "    抬笔到上面中点位置\n",
-    "    放笔画到中心位置\n",
     "    \n",
     "注意点：\n",
     "\n",
@@ -736,12 +727,41 @@
     "    1.绘制横线\n",
     "    2.绘制竖线\n",
     "\n",
-    "算法：\n",
-    "    \n",
-    "    turtle绘制一条横线\n",
     "    \n",
     "注意点：\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ipyturtle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-c31418b206f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mipyturtle\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTurtle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTurtle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipyturtle'"
+     ]
+    }
+   ],
+   "source": [
+    "from ipyturtle import Turtle\n",
+    "\n",
+    "t=Turtle()\n",
+    "t\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -762,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -845,5 +865,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
