--- a/Exercise01.ipynb
+++ b/Exercise01.ipynb
@@ -635,7 +635,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "solution2": "hidden",
+    "solution2": "shown",
     "solution2_first": true
    },
    "source": [
@@ -643,6 +643,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
@@ -652,7 +653,7 @@
     "run_control": {
      "marked": true
     },
-    "solution2": "hidden"
+    "solution2": "shown"
    },
    "source": [
     "难易程度：简单（零星）\n",
@@ -663,7 +664,6 @@
     "    1.绘制正方形\n",
     "    2.绘制正方形中间的十字   \n",
     "\n",
-    "    \n",
     "注意点：\n",
     "\n",
     "    在移动时注意要抬笔"
@@ -671,9 +671,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "solution2": "hidden"
+    "ExecuteTime": {
+     "end_time": "2019-12-17T10:19:05.306038Z",
+     "start_time": "2019-12-17T10:19:01.467796Z"
+    },
+    "solution2": "shown"
    },
    "outputs": [],
    "source": [
@@ -728,7 +732,10 @@
     "    2.绘制竖线\n",
     "\n",
     "    \n",
-    "注意点：\n"
+    "注意点：\n",
+    "<img src=\"img/TEST.png\",width=60,height=60>\n",
+    "    ![title](IMG/TEST.png\n",
+    "    )"
    ]
   },
   {
@@ -782,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.5.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
