Update to Exercise 1-14

--- a/Exercise01.ipynb
+++ b/Exercise01.ipynb
@@ -635,15 +635,15 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "solution2": "shown",
+    "solution2": "hidden",
     "solution2_first": true
    },
    "source": [
-    "1.12（Turtle: 绘制正方形）编写程序在屏幕中心绘制正方形。"
+    "1.12（Turtle: 绘制正方形）编写程序在屏幕中心绘制正方形。\n",
+    "![1-12](img/1-12.png)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
@@ -653,7 +653,7 @@
     "run_control": {
      "marked": true
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "难易程度：简单（零星）\n",
@@ -677,7 +677,7 @@
      "end_time": "2019-12-17T10:19:05.306038Z",
      "start_time": "2019-12-17T10:19:01.467796Z"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -714,14 +714,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
    "source": [
-    "1.13 （Turtle: 绘制十字）编写程序绘制十字"
+    "1.13 （Turtle: 绘制十字）编写程序绘制十字\n",
+    "![1-13](img/1-13.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "solution2": "hidden"
+   },
    "source": [
     "难易程度：简单（零星）\n",
     "\n",
@@ -732,36 +738,91 @@
     "    2.绘制竖线\n",
     "\n",
     "    \n",
-    "注意点：\n",
-    "<img src=\"img/TEST.png\",width=60,height=60>\n",
-    "    ![title](IMG/TEST.png\n",
-    "    )"
+    "注意点：\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ipyturtle'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-c31418b206f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mipyturtle\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTurtle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTurtle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipyturtle'"
-     ]
-    }
-   ],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-17T11:44:46.235887Z",
+     "start_time": "2019-12-17T11:44:43.763369Z"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
    "source": [
-    "from ipyturtle import Turtle\n",
+    "import turtle\n",
     "\n",
-    "t=Turtle()\n",
-    "t\n",
-    "\n"
+    "turtle.forward(100)\n",
+    "turtle.penup()\n",
+    "turtle.goto(50, 50)\n",
+    "turtle.pendown()\n",
+    "turtle.right(90)\n",
+    "turtle.forward(100)\n",
+    "turtle.done()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "1.14 (Turtle: 绘制三角形) 编写程序绘制三角形\n",
+    "![1-14](img/1-14.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "source": [
+    "难易程度：简单（零星）\n",
+    "\n",
+    "思考：\n",
+    "\n",
+    "    目标：三角形\n",
+    "    1.绘制三角形的各条边  \n",
+    "\n",
+    "注意点：\n",
+    "\n",
+    "    最简单的等边三角形内角是60°，但是Turtle每次旋转角度不一定是60度。第一次旋转60°，第二次、第三次旋转270°"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-17T12:06:36.916979Z",
+     "start_time": "2019-12-17T12:06:34.409063Z"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "turtle.right(60)\n",
+    "turtle.forward(100)\n",
+    "turtle.right(120)\n",
+    "turtle.forward(100)\n",
+    "turtle.right(120)\n",
+    "turtle.forward(100)\n",
+    "\n",
+    "turtle.done()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
