--- a/Exercise01.ipynb
+++ b/Exercise01.ipynb
@@ -818,11 +818,228 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "1.15 (Turtle: 绘制两个三角形) 编写程序绘制两个三角形\n",
+    "![1-15](img/1-15.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "source": [
+    "难易程度：简单（零星）\n",
+    "\n",
+    "思考：\n",
+    "        \n",
+    "    对顶三角形，难度不大，重点是角度\n",
+    "    \n",
+    "注意点：\n",
+    "    \n",
+    "    三角形开始和1-14一样，但是了第三条边，长度直接双倍，变成第二个三角形的第一条边"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-18T13:10:45.981066Z",
+     "start_time": "2019-12-18T13:10:42.621385Z"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "turtle.right(60)\n",
+    "turtle.forward(100)\n",
+    "turtle.right(120)\n",
+    "turtle.forward(100)\n",
+    "turtle.right(120)\n",
+    "turtle.forward(200)\n",
+    "turtle.right(240)\n",
+    "turtle.forward(100)\n",
+    "turtle.left(120)\n",
+    "turtle.forward(100)\n",
+    "\n",
+    "turtle.done()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "1.16 (Turtle: 绘制四个园) 编写程序绘制四个园\n",
+    "![1-16](img/1-16.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "source": [
+    "难易程度：简单（零星）\n",
+    "\n",
+    "思考：\n",
+    "        \n",
+    "    先确定第一个园圆心，再确定半径。\n",
+    "    \n",
+    "注意点：\n",
+    "    \n",
+    "    与左上角相切的右上角，左下角圆心位置分别需要在x坐标，y坐标上加减直径长度。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "solution2": "hidden"
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "turtle.penup()\n",
+    "turtle.goto(-100, -100)\n",
+    "turtle.pendown()\n",
+    "turtle.circle(100)\n",
+    "\n",
+    "turtle.penup()\n",
+    "turtle.goto(100, -100)\n",
+    "turtle.pendown()\n",
+    "turtle.circle(100)\n",
+    "\n",
+    "turtle.penup()\n",
+    "turtle.goto(100, 100)\n",
+    "turtle.pendown()\n",
+    "turtle.circle(100)\n",
+    "\n",
+    "turtle.penup()\n",
+    "turtle.goto(-100, 100)\n",
+    "turtle.pendown()\n",
+    "turtle.circle(100)\n",
+    "\n",
+    "turtle.done()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "1.17 (Turtle: 绘制直线) 编写程序绘制一根红色直线连接两个点（-39, 48）和（50, -50）。同时显示两个点的坐标。\n",
+    "![1-17](img/1-17.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "source": [
+    "难易程度：简单（零星）\n",
+    "\n",
+    "思考：\n",
+    "        \n",
+    "    移动到第一个点的位置，再移动到第二个点的位置。\n",
+    "    \n",
+    "注意点：\n",
+    "    \n",
+    "    最开始移动到第一个点之前需要抬笔。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "turtle.penup()\n",
+    "turtle.goto(-39, 48)\n",
+    "turtle.pendown()\n",
+    "turtle.write(\"(-39, 48)\")\n",
+    "turtle.color(\"red\")\n",
+    "turtle.goto(50, -50)\n",
+    "turtle.color(\"black\")\n",
+    "turtle.write(\"(50, -50)\")\n",
+    "turtle.penup()\n",
+    "\n",
+    "turtle.done()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "1.18 (Turtle: 绘制五角星) 编写程序绘制一个星星。（注意：五角星的内角度数是36°）\n",
+    "![1-18](img/1-18.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "source": [
+    "难易程度：困难（两星）\n",
+    "\n",
+    "思考：\n",
+    "        \n",
+    "    更改Turtle方向来绘制五角星。\n",
+    "    \n",
+    "注意点：\n",
+    "    \n",
+    "    五角星内角角度变化不同。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-18T13:32:21.211624Z",
+     "start_time": "2019-12-18T13:32:18.050263Z"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "turtle.right(72)\n",
+    "turtle.forward(200)\n",
+    "turtle.right(144)\n",
+    "turtle.forward(200)\n",
+    "turtle.right(144)\n",
+    "turtle.forward(200)\n",
+    "turtle.right(144)\n",
+    "turtle.forward(200)\n",
+    "turtle.right(144)\n",
+    "turtle.forward(200)\n",
+    "\n",
+    "turtle.done()\n"
+   ]
   },
   {
    "cell_type": "code",
