--- a/Exercise01.ipynb
+++ b/Exercise01.ipynb
@@ -1003,7 +1003,6 @@
    },
    "source": [
     "难易程度：困难（两星）\n",
-    "\n",
     "思考：\n",
     "        \n",
     "    更改Turtle方向来绘制五角星。\n",
@@ -1042,11 +1041,190 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "1.19 (Turtle: 绘制六边形)编写程序通过连接（40， -69.28），（-40， -69.28）， （-80， -9.8），（-40， 69），（40， 69）和 （80， 0）来绘制六边形\n",
+    "![1-19](img/1-19.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "source": [
+    "难易程度：简单（零星）\n",
+    "\n",
+    "思考：\n",
+    "        \n",
+    "    连接6个点\n",
+    "    \n",
+    "注意点：\n",
+    "    \n",
+    "    连接点的时候第一个点非零点，需要抬笔。第六个点后还要回到第一个点。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-19T11:27:08.056769Z",
+     "start_time": "2019-12-19T11:27:05.274469Z"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "turtle.penup()\n",
+    "turtle.goto(40, -69.28)\n",
+    "turtle.pendown()\n",
+    "turtle.goto(-40, -69.28)\n",
+    "turtle.goto(-80, -9.8)\n",
+    "turtle.goto(-40, 69)\n",
+    "turtle.goto(40, 69)\n",
+    "turtle.goto(80, 0)\n",
+    "turtle.goto(40, -69.28)\n",
+    "turtle.done()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "1.20 (Turtle: 绘制一个长方体) 编写程序绘制一个立方体\n",
+    "![1-20](img/1-20.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "source": [
+    "难易程度：简单（零星）\n",
+    "\n",
+    "思考：\n",
+    "        \n",
+    "    得到立方体的各个坐标点进行连接\n",
+    "    \n",
+    "注意点：\n",
+    "    \n",
+    "    先连接立方体不同的面，再组成立方体"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "solution2": "hidden"
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "turtle.goto(200, 0)\n",
+    "turtle.goto(200, 100)\n",
+    "turtle.goto(0, 100)\n",
+    "turtle.goto(0, 0)\n",
+    "turtle.left(30)\n",
+    "turtle.goto(52, 50)\n",
+    "turtle.goto(252, 50)\n",
+    "turtle.goto(200, 0)\n",
+    "turtle.goto(200, 100)\n",
+    "turtle.goto(252, 150)\n",
+    "turtle.goto(52, 150)\n",
+    "turtle.goto(0, 100)\n",
+    "turtle.goto(52, 150)\n",
+    "turtle.goto(52, 50)\n",
+    "turtle.goto(252, 50)\n",
+    "turtle.goto(252, 150)\n",
+    "\n",
+    "turtle.done()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "1.21（Turtle: 绘制时钟）编写程序绘制一个显示9:15:00的时钟\n",
+    "![1-21](img/1-21.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "source": [
+    "难易程度：较难（一星）\n",
+    "\n",
+    "思考：\n",
+    "        \n",
+    "    确定园的半径，再更改数字的坐标\n",
+    "    \n",
+    "注意点：\n",
+    "    \n",
+    "    适当调整数字位置"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "turtle.circle(300)\n",
+    "turtle.penup()\n",
+    "turtle.goto(0, 300)\n",
+    "turtle.pendown()\n",
+    "turtle.goto(275, 300)\n",
+    "turtle.penup()\n",
+    "turtle.goto(0, 300)\n",
+    "turtle.pendown()\n",
+    "turtle.goto(0, 550)\n",
+    "turtle.penup()\n",
+    "turtle.goto(0, 300)\n",
+    "turtle.pendown()\n",
+    "turtle.goto(-225, 300)\n",
+    "turtle.penup()\n",
+    "turtle.goto(0, 580)\n",
+    "turtle.pendown()\n",
+    "turtle.write(\"12\")\n",
+    "turtle.penup()\n",
+    "turtle.goto(290, 300)\n",
+    "turtle.pendown()\n",
+    "turtle.write(\"3\")\n",
+    "turtle.penup()\n",
+    "turtle.goto(0, 20)\n",
+    "turtle.pendown()\n",
+    "turtle.write(\"6\")\n",
+    "turtle.penup()\n",
+    "turtle.goto(-280, 300)\n",
+    "turtle.pendown()\n",
+    "turtle.write(\"9\")\n",
+    "turtle.penup()\n",
+    "turtle.goto(0, -20)\n",
+    "turtle.pendown()\n",
+    "turtle.write(\"9:15:00\")\n",
+    "\n",
+    "turtle.done()\n"
+   ]
   }
  ],
  "metadata": {
